--- a/Software Developer Simulator Unity/Assembly-CSharp.csproj
+++ b/Software Developer Simulator Unity/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\clockScript.cs" />
     <Compile Include="Assets\scripts\cameraScript.cs" />
     <Compile Include="Assets\scripts\customizeTraits.cs" />
     <Compile Include="Assets\scripts\Data.cs" />
