--- a/Software Developer Simulator Unity/Assembly-CSharp.csproj
+++ b/Software Developer Simulator Unity/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Assets\scripts\clockScript.cs" />
     <Compile Include="Assets\scripts\customizeTraits.cs" />
     <Compile Include="Assets\scripts\Data.cs" />
+    <Compile Include="Assets\scripts\displayGrades.cs" />
     <Compile Include="Assets\scripts\GameMenu.cs" />
     <Compile Include="Assets\scripts\manageMenus.cs" />
     <Compile Include="Assets\scripts\manager.cs" />
