--- a/Software Developer Simulator Unity/Assembly-CSharp.csproj
+++ b/Software Developer Simulator Unity/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Classroom.cs" />
     <Compile Include="Assets\DoorScript.cs" />
     <Compile Include="Assets\scripts\cameraScript.cs" />
     <Compile Include="Assets\scripts\clockScript.cs" />
@@ -73,6 +74,7 @@
     <Compile Include="Assets\scripts\manager.cs" />
     <Compile Include="Assets\scripts\Player_Controller.cs" />
     <Compile Include="Assets\scripts\Subject.cs" />
+    <Compile Include="Assets\scripts\Teacher.cs" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMP_SDF-Surface-Mobile.shader" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
     <None Include="Assets\TextMesh Pro\Resources\Shaders\TMPro_Properties.cginc" />
