--- a/Software Developer Simulator Unity/Assembly-CSharp.csproj
+++ b/Software Developer Simulator Unity/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
   <ItemGroup>
     <Compile Include="Assets\Classroom.cs" />
     <Compile Include="Assets\DoorScript.cs" />
+    <Compile Include="Assets\phoneScript.cs" />
     <Compile Include="Assets\scripts\cameraScript.cs" />
     <Compile Include="Assets\scripts\clockScript.cs" />
     <Compile Include="Assets\scripts\customizeTraits.cs" />
